src/style.css
body {
    background-color: #001740;
    color: #aaaa99;
    margin: 0;
}
header {
    height: 10vh;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    border-bottom: 3px solid #aaaa99;
}
main {
    height: 95vh;
    display: grid;
    grid-template-columns: 1fr 4fr ;
}
.main-screen {
    display: flex;
    flex-direction: column;
    align-items:baseline;
    justify-content: baseline;
    gap: 10%;
    padding: 20px;
    height: max(75vh , 300px);
    overflow: scroll;
}
.main-screen::-webkit-scrollbar {
    display: none;
}
.top-screen {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}
.contains-newProject {
    width: clamp( 300px,90% , 650px);
    display: flex;
    justify-content: flex-start;
    border-radius: 10px;
    box-shadow: 0 5px 8px 5px #000020;
    
}
.bottom-screen {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
}
.description {
    display: flex;
    flex-flow: column;
    justify-content: center;
    align-items: flex-start;
    border: 1px solid #aaaa99;
}
.nav {
    height: 19px;
    overflow: hidden;
    transition: 0.6s ;
}
.navbar {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border: 1px solid #aaaa99;
}
.nav-ul {
    margin: 0;
    padding-left: 20px;
    display: flex;
    flex-direction: column;
    justify-content:flex-end;
    gap: 10px;
    height: 100%;

}
.nav {
    list-style: none;
}
.nav:active {
    color: #aaaa99;
}
#title-span {
    cursor: pointer;
    position: relative;
    margin-left: 10px;
}
#title-span:hover {
    text-decoration: underline;
    color: aqua;
}
#title-span::before {
    content: "";
    border-color: red;
    border-width: 0 1px 1px 0;
    border-style: solid;
    rotate: -45deg;
    margin-top: 3px;
    aspect-ratio: 1/1;
    width: 9px;
    position: fixed;
    margin-left: -20px;
    transition: 0.6s;
}
.nav.open #title-span::before {
    rotate: 45deg;
    border-color: aqua;
}
li.nav.open {
    padding-top: 10px;
    font-size: 22px;
}
.myProjects {
    width: clamp( 300px,90% , 650px);
    /* min-height: 20vh; */
    padding: 15px 0;
    margin-bottom: 5vh;
    border-radius: 20px;
    box-shadow: 0 5px 8px 5px #000020;
}
.Projects-ul {
    padding-left: 38px;
    width: calc(100% - 38px);
    margin: 0;
    padding-left: 20px;
    list-style:none;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows:auto;
    grid-auto-rows: auto;
    grid-auto-columns: 100%;
    column-gap: 10px;
    row-gap: 7px;
    position: relative;
}
.project-container {
    width: 100%;
    list-style: none;
    display: grid;
    grid-template-columns: 1fr 40px;
    grid-template-rows: auto;
    column-gap: 15px;
    position: relative;
}
.myProject {
    font-size: 15px;
    padding-top: 5px;
    padding-left: 20px;
    list-style: none;
}
.myProject li:hover {
    background-color: #000020;
    text-decoration: none;
}
.project {
    height: 40px;
    width: 100%;
    font-size: 20px;
    font-weight: 600;
    border-width: 0 0 1px 0;
    border-style: solid;
    border-color: rgba(200,200,200,0.3);
    border-radius: 10px;
    position: relative;
    padding-left: 5px;
    transition: 0.3s;
    display: grid;
    grid-template: "title counter" 40px/
                    1fr    25px;
    grid-auto-flow: row;
    justify-content: space-between;
    align-items: center;
}
.project.open, .edit-span.open {
    font-size: 24px;
    color: rgba(0,120,195,1);
    background-color: rgba(200,200,200,0.1);
    scale: 1.03;
}
.project.nav.open {
    height: auto;

}
.project.open {
    grid-template: "title counter" 40px
                    "tasks  . "   auto/
                    1fr     25px;
}
.project:hover {
    color: rgba(0,120,195,1);
    background-color: rgba(200,200,200,0.1);    
}
.project.open .pp-spanTitle::before {
    rotate: 45deg;
    transition: 0.3s;
    border-color: aqua;
}
.edit-span {
    font-size: 2rem;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 40px;
    width: 100%;
    cursor: pointer;
    border-radius: 50%;
    transition: 0.3s;
}
.pp-spanTitle::before {
    content: '';
    border-style: solid;
    border-width: 0 1px 1px 0;
    border-color: red;
    rotate: -45deg;
    position:absolute;
    left: -10px;
    width: 5px;
    aspect-ratio: 1 / 1;
    transition: 0.3s;
}

.pp-spanTitle {
    grid-area: title;
    display: flex;
    align-items: center;
    height: 41px;
    width: 100%;
    cursor: pointer;
    flex: 1 1 80%;
}
.pp-spanTitle:nth-child(1) {
    text-transform: capitalize;
}
.taskCounter {
    grid-area: counter;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25px;
    height: 25px;
    aspect-ratio: 1/1;
    font-size: 16px;
    font-weight: 100;
    background-color: rgba(200,200,200,0.2);
    border-radius: 50%;
}
.tasks-container {
    grid-area: tasks;
}
.edit-span.open {
    font-size: 2.2rem;
    color: rgba(0,120,195,1);
    background-color: rgba(200,200,200,0.1);
    scale: 1.06;
}
.edit-span:hover {
    color: rgba(0,120,195,1);
    background-color: rgba(200,200,200,0.1);
}
.dots {
    width: 100%;
    height: 50%;
    display: flex;
    justify-content: center;
    align-items: flex-end;
}
.layout-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    position: absolute;
    height: min(70px, 10vh);
    width: clamp(35px , 10vw, 60px);
    right: clamp(-60px,-9vw,-30px);
    /* right: -10vw; */
    top: min(calc(-2vh + 3px), -10px);
}
.triangle {
    content: '';
    position: relative;
    border-left: 5px solid transparent;
    border-right: 5px solid transparent;
    border-bottom: 5px solid rgba(0,120,195,1);
    rotate: -90deg;
    margin-right: -3px;
    width: 0;
    aspect-ratio: 1 /1 ;
    flex: 0;
}
.edit-mainBox {
    position: relative;
    width: 100%;
    background-color: rgba(0,120,195,1);
    border-radius: 10px;
    flex: 10 1 35px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 5px;
    padding-left: 3px;
}
.option {
    width: 45%;
    aspect-ratio: 1 /1;
    justify-content: stretch;
    flex: 1 1 auto;
}
.icon {
    max-width: 80%;
    position: relative;
    margin: 0 auto;
    object-fit: fill;
}

h2 {
    font-size: 35px;
    margin-top: 0;
}
.bottom-title {
    font-size: 28px;
    font-weight: 500;
    margin-bottom: 30px;
}
.input {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}
input[type=text] {
    background-color: #001740;
    color:#aaaa99;
    border: none;
}
input[type=text]:focus {
    border: none;
    outline: none;
}
.newProject {
    display: grid;
    width: 100%;
    grid-template-columns: 35px 1fr ;
    grid-template-rows: 45px;
    grid-auto-rows: 45px;
    grid-auto-columns: 35px 1fr;
    justify-items: baseline;
    align-items: center;
    height: 45px;
    transition: 0.6s;
    overflow: hidden;font-size: 10px;
    font-size: 16px;
}
.plusSign{
    grid-area: 1 / 1 / 2 /2;
    width: 35px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    aspect-ratio: 1/1;
    color: red;
    cursor: pointer;
    font-size: 28px;
    transition: 0.2s;
}
#projectName-input {
    font-size: inherit;
    grid-area: 1 / 2 / 2 /3;
    width: min(200px , 100%);
}
#projectDesc-input {
    font-size: inherit;
    grid-area: 2 / 2 / 3 / 3;
    width: min(200px , 100%);
}
#projectDate-input {
    font-size: inherit;
    grid-area: 3 / 2 / 4 / 3;
    background-color: #001740;
    color: #aaaa99;
    border: none;
    width: min(200px , 100%);
}
#projectDate-input:focus {
    outline: none;
}
#projectType-input {
    font-size: inherit;
    grid-area: 3 / 2 / 4 / 3;
    background-color: #001740;
    color: #aaaa99;
    border: none;
    width: min(200px , 100%);
}
#projectType-input:focus {
    outline: none;
}
.plusSign:hover {
    color: aqua;
}
.plusSign:active {
    transform: scale(0.5);
}
footer{
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: 0;
    height: 5vh;
    width: 100vw;
}

